# sbanken-api-examples

RustSampleApplication/: Cargo.toml  README.md  credentials.json
RustSampleApplication/src/: main.rs  sbanken_api.rs
