[package]
name = "sbanken"
version = "0.1.0"
edition = "2021"

[dependencies]
sbanken = "0.0.1-alpha.3"
tokio = {version = "1.23.0", features = ["full"]}
urlencoding = "2.1.2"
base64 = "0.20.0"
reqwest = "0.11.13"
anyhow = "1.0"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
